# simapi

./: .codedocs  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  acdata.h  flake.nix  gen.py  rfdata.h  simapi.pc.in
.github/workflows/: ci.yaml
c/: rfdata.h
codegen/: gen.py
docs/: UDP_SUPPORT.md  index.md  logitechg29.md  lua_scripting.md  monocoque.md  mozakspro.md  mozar5.md  rfactor2.md  serial.md  serial_custom.md  shakers.md  sharedmemory.md  simd.md  simd_poke.md  simd_usage.md  supportedsims.md  thirdpartydevices.md
include/: CMakeLists.txt  acdata.h  ams2udpdata.h  dirt2data.h  f12018.h  forza.h  lmu.h  outgauge.h  pcars2data.h  r3e.h  rbrdata.h  rf2data.h  rfdata.h  scs2data.h  wreckfest2data.h
include/F12018/: PacketCarSetupData.h  PacketCarStatusData.h  PacketCarTelemetryData.h  PacketEventData.h  PacketHeader.h  PacketLapData.h  PacketMotionData.h  PacketParticipantsData.h  PacketSessionData.h
simapi/: CMakeLists.txt  ac.h  dirt2.h  f1.h  forzadef.h  getpid.c  getpid.h  lmudef.h  outgauge.h  pcars2.h  r3edef.h  rbr.h  rf2.h  scs2.h  simapi.h  simdata.h  simmap.h  simmapper.c  simmapper.h  test.h  wreckfest2.h
simapi/mapping/: acmapper.c  dirt2mapper.c  f12018mapper.c  forzamapper.c  outgaugemapper.c  pcars2mapper.c  r3emapper.c  rbrmapper.c  rf2mapper.c  scs2mapper.c  wreckfest2mapper.c
simd/: .astylerc  CMakeLists.txt  README.md  confighelper.c  confighelper.h  dirhelper.c  loopdata.h  parameters.c  parameters.h  poke.c  poke.h  simd.c
simd/conf/: simd.config  simd.service
simmap/: basicmap.h  mapacdata.c  mapacdata.h  maprf2data.c  maprf2data.h  mapsimdata.c
tests/: README.md  setsimdata.c  view_telemetry.c
tools/distro/arch/git/simapi/: .SRCINFO  PKGBUILD
tools/distro/arch/git/simd/: .SRCINFO  PKGBUILD
tools/distro/debian/dpkg/: simd_control
tools/distro/debian/dpkg/debian-latest/: simapi_control
tools/distro/debian/dpkg/ubuntu-latest/: simd_control
tools/distro/fedora/rpm/: simapi.spec  simd.spec
